k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: firuzo-service
  labels:
    app.kubernetes.io/name: firuzo-platform
    app.kubernetes.io/component: web-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: firuzo-app
